May 24, 2010 Wei Mingzhi <whistler_wmz@users.sf.net>

 * win32/gui/WndMain.c: Also show Japanese titles properly for Windows
   (need to set ACP to east-asian languages).
 * win32/intl/gettext.c: Added a hack for UTF-8 support.
 * win32/gui/AboutDlg.c: Updated info.
 * win32/config.h: Silenced MSVC6 warnings.

May 23, 2010 Wei Mingzhi <whistler_wmz@users.sf.net>

 * AUTHORS: Updated info.
 * gui/AboutDlg.c: Likewise, and fixed FTBFS on SLED 10.
 * gui/MemcardDlg.c: Show Japanese titles properly.
 * libpcsxcore/sio.h: Likewise.
 * libpcsxcore/sio.c: Likewise.

May 22, 2010 Wei Mingzhi <whistler_wmz@users.sf.net>

 * plugins/dfsound/pulseaudio.c: Use Native Endian instead of Little Endian.

May 21, 2010 Wei Mingzhi <whistler_wmz@users.sf.net>

 * plugins/dfsound/oss.c: Readded OSS, PulseAudio, ALSA & NULL backends.
 * plugins/dfsound/pulseaudio.c: Likewise.
 * plugins/dfsound/nullsnd.c: Likewise.
 * plugins/dfsound/alsa.c: Likewise.
 * plugins/dfsound/spu.c: Likewise.
 * configure.ac: Added an option --enable-sound to specify the sound backend.
 * plugins/dfsound/Makefile.am: Likewise.
 * po/pt_BR.po, po/it.po, po/zh_TW.po, po/ru_RU.po, po/pcsx.pot, po/zh_CN.po:
   Updated.
 * libpcsxcore/psxbios.c: Implemented several HLE BIOS functions inside the
   core instead of calling the standard C functions. (Not done yet)
 * plugins/dfsound/sdl.c: Changed buffer size.
 * libpcsxcore/psxinterpreter.c: Revert the previous revert (why the problem
   on amd64 disappeared?).
 * libpcsxcore/ppc/pR3000A.c: Likewise.
 * libpcsxcore/cdrom.c: Likewise.
 * libpcsxcore/ix86_64/iR3000A-64.c: Likewise.
 * libpcsxcore/ix86/iR3000A.c: Likewise.
 * libpcsxcore/sio.c: Likewise.
 * libpcsxcore/psxdma.c: Likewise.
 * libpcsxcore/psxcounters.c: Likewise.
 * libpcsxcore/mdec.c: Likewise, and fixed the cycle value in mdec1Interrupt().

May 20, 2010 Wei Mingzhi <whistler_wmz@users.sf.net>

 * macosx/main.m: Removed obsolete code, added const to function definations.